--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "react-bootstrap": "^2.0.2",
+        "react-router-dom": "^6.0.2"
     }
 }
